--- a/index.html
+++ b/index.html
@@ -4,12 +4,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="http://fonts.cdnfonts.com/css/pokemon-solid" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <title>Pokedex</title>
+  <style>
+    @import url('http://fonts.cdnfonts.com/css/pokemon-solid');
+</style>
+
 </head>
 <body>
+<section>  
   <h1>Pokedex</h1>
+</section>
   <div id="poke-container" class="poke-container"></div>
+  <footer><span>Página feita para exercitar uso de api, aqui é mostrado 150 pokemons da primeira geração do anime!</span></footer>
   <script src="./script.js"></script>
 </body>
 </html>
